--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Pomodoro Timer</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
-        <div class="container py-3"></div>
-        <div class="container">
-            <h1>Pomodoro Timer</h1>
-            <h2 class="mode" id="work">Work Time</h2>
-            <p class="timer" id="work">25:00</p>
-            <div class="container" id="buttons">
-                <button class="btn btn-primary" onclick="start()" id="startStop">Start</button>
-                <button class="btn btn-secondary" onclick="reset()" id="reset">Reset</button>
-                <button class="btn btn-light" onclick="skip()" id="skip">Skip</button>
-            </div>
-        </div>
+
+<head>
+    <title>Pomodoro Timer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container py-3 bg-danger rounded-3 shadow" id="timer-container">
         <div class="container py-3">
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress"> <!--TODO: make transparent colored jumbotron and color buttons and progress bar-->
+                <div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                </div>
             </div>
         </div>
-        <script src="js/main.js"></script> <!--don't put  in front of file name-->
-    </body>
+        <div class="container">
+            <h1 class="py-2 text-light">Pomodoro Timer</h1>
+            <h1 class="timer display-1 text-center text-light" id="work">25:00</h1>
+            <h3 class="mode text-center text-light" id="work">Work Time</h2>
+                <div class="container" id="buttons">
+                    <button class="btn btn-primary" onclick="start()" id="startStop">Start</button>
+                    <button class="btn btn-secondary" onclick="reset()" id="reset">Reset</button>
+                    <button class="btn btn-light" onclick="skip()" id="skip">Skip</button>
+                </div>
+        </div>
+    </div>
+    <script src="js/main.js"></script> <!--don't put  in front of file name-->
+</body>
+
 </html>
